update computer, clothes, music, movie, register, shopping cart pages

--- a/HTMLTest/WebContent/homepage/clothing.html
+++ b/HTMLTest/WebContent/homepage/clothing.html
@@ -2,9 +2,61 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Clothing</title>
+	<title>Cloth</title>
+	<style type="text/css">
+		div.element {
+			border: 1px solid #CCCCFF;
+			width: calc(32% - 30px);
+			height: 500px;
+			float: left;
+			box-shadow: 1px 1px 1px #666666;
+			padding: 30px 15px;
+			margin: 0 calc(1% - 5px);
+		}
+		div.img {
+			text-align: center;
+		}
+		img {
+			width: 200px;
+		}
+	</style>
 </head>
 <body>
-	<h1>Clothing page</h1>
+	<div class="element">
+		<div class="img"><img alt="의상" src="images/clothes1.jpg"></div>
+		헤비 보아 플리스 자켓_크림<br>
+		브랜드/품번 CODEGRAPHY / C20W0JP003CR<br>
+		조회수(1개월) 3.1만 회 이상<br>
+		누적판매(1년) 500개 이상(결제완료-반품)<br>
+		19~23세 , 여성 이 많이 구매했습니다.<br> 
+		국내 배송 / 입점사 배송<br>
+		출고 기간 평균 2.9일 / 주말, 공휴일 제외
+		<br><br>
+		<button type="button">쇼핑카트에 추가하기</button>
+	</div>
+	<div class="element">
+		<div class="img"><img alt="의상" src="images/clothes2.jpg"></div>
+		솔리드 숏 더플 코트 (네이비)<br>
+		브랜드/품번 LOFI / L20SDSDFCTNY<br>
+		조회수(1개월) 1만 회 이상<br>
+		누적판매(1년) 400개 이상(결제완료-반품)<br>
+		24~28세 , 남성 이 많이 구매했습니다.<br> 
+		배송 방법 국내 배송 / 입점사 배송 / 롯데택배<br>
+		출고 기간 평균 0.6일 / 주말, 공휴일 제외
+		<br><br>
+		<button type="button">쇼핑카트에 추가하기</button>
+	</div>
+	<div class="element">
+		<div class="img"><img alt="의상" src="images/clothes3.jpg"></div>
+		3일 지연 RDS 크루져 파카 블랙<br>
+		브랜드/품번 COVERNAT / CO2004DP09BK<br>
+		조회수(1개월) 8.6만 회 이상<br>
+		누적판매(1년) 600개 이상(결제완료-반품)<br>
+		24~28세 , 남성 이 많이 구매했습니다. <br>
+		배송 방법 국내 배송 / 입점사 배송 / CJ대한통운<br>
+		출고 기간 도움말 보기 평균 0.8일 / 주말, 공휴일 제외
+		<br><br>
+		<button type="button">쇼핑카트에 추가하기</button>
+	</div>
 </body>
 </html>
