--- a/HTMLTest/WebContent/homepage/music.html
+++ b/HTMLTest/WebContent/homepage/music.html
@@ -3,8 +3,68 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Music</title>
+	<style type="text/css">
+		div.element {
+			border: 1px solid #CCCCFF;
+			width: calc(32% - 30px);
+			height: 500px;
+			float: left;
+			box-shadow: 1px 1px 1px #666666;
+			padding: 30px 15px;
+			margin: 0 calc(1% - 5px);
+		}
+		div.img {
+			text-align: center;
+		}
+		img {
+			width: 200px;
+			height: 200px;
+		}
+		div.audio {
+			text-align: center;
+		}
+		audio {
+			width: 230px;
+		}
+	</style>
 </head>
 <body>
-	<h1>Music page</h1>
+	<div class="element">
+		<div class="img"><img alt="앨범" src="images/music1.jpg"></div>
+		<br>
+		버즈 3집 - PERFECT<br>
+		이 세상 최고의 밴드 버즈가 팬들 곁으로 돌아온다.
+		<br><br>
+		<div class="audio">
+			<audio src="images/horse.ogv" controls></audio>
+			<br><br>
+			<button type="button">쇼핑카트에 추가하기</button>
+		</div>
+	</div>
+	<div class="element">
+		<div class="img"><img alt="앨범" src="images/music2.jpg"></div>
+		<br>
+		YB 7집 앨범 ‘WHY BE?’ 발매<br>
+		8월 10일 발매, 3년 만에 발매되는 YB의 정규 앨범, 총 22곡 수록<br>
+		3년 만에 발매되는 YB의 일곱 번째 정규 앨범. [WHY BE?] 다시 출발하는 YB의 음악.
+		<br><br>
+		<div class="audio">
+			<audio src="images/horse.ogv" controls></audio>
+			<br><br>
+			<button type="button">쇼핑카트에 추가하기</button>
+		</div>
+	</div>
+	<div class="element">
+		<div class="img"><img alt="앨범" src="images/music3.jpg"></div>
+		<br>
+		‘PLAY’ - 악동뮤지션의 데뷔 앨범<br>
+		몽골에서 온 두 남매 이찬혁-이수현. 기존의 10대들과는 다른 성장 배경 탓일까 자연과 함께 자란 그들의 K팝스타에서의 첫 등장은 어딘지 모르게 새롭게 다가왔다.
+		<br><br>
+		<div class="audio">
+			<audio src="images/horse.ogv" controls></audio>
+			<br><br>
+			<button type="button">쇼핑카트에 추가하기</button>
+		</div>
+	</div>
 </body>
 </html>
