--- a/HTMLTest/WebContent/homepage/movie.html
+++ b/HTMLTest/WebContent/homepage/movie.html
@@ -3,8 +3,35 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Movie</title>
+	<style type="text/css">
+		video {
+			width: 100%;
+		}
+		div.element {
+			border: 1px solid #CCCCFF;
+			width: calc(32% - 20px);
+			height: 100%;
+			float: left;
+			box-shadow: 1px 1px 1px #666666;
+			padding: 10px;
+			margin: 0 calc(1% - 5px);
+		}
+		img {
+			width: 100%;
+			height: 400px;
+		}
+	</style>
 </head>
 <body>
-	<h1>Movie page</h1>
+	<video src="images/mov_bbb.mp4" autoplay controls muted="true"></video>
+	<div class="element">
+		<a href="#"><img alt="영화" src="images/movie1.jpg"></a>
+	</div>
+	<div class="element">
+		<a href="#"><img alt="영화" src="images/movie2.jpg"></a>
+	</div>
+	<div class="element">
+		<a href="#"><img alt="영화" src="images/movie3.jpg"></a>
+	</div>
 </body>
 </html>
