--- a/HTMLTest/WebContent/homepage/interior.html
+++ b/HTMLTest/WebContent/homepage/interior.html
@@ -3,8 +3,48 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Interior</title>
+	<style type="text/css">
+		div.element {
+			border: 1px solid #CCCCFF;
+			width: calc(32% - 30px);
+			height: 100%;
+			float: left;
+			box-shadow: 1px 1px 1px #666666;
+			padding: 30px 15px;
+			margin: 0 calc(1% - 5px);
+		}
+		div.img {
+			text-align: center;
+		}
+		img {
+			width: 200px;
+		}
+	</style>
 </head>
 <body>
-	<h1>Interior page</h1>
+	<div class="element">
+		<div class="img"><img alt="인테리어" src="images/interior1.jpg"></div>
+		<br>
+		유로 602 필로우 침대 QK<br><br>
+		판매가 : 1,272,000원
+		<br><br>
+		<button type="button">쇼핑카트에 추가하기</button>
+	</div>
+	<div class="element">
+		<div class="img"><img alt="인테리어" src="images/interior2.jpg"></div>
+		<br>
+		유로 로아 드레스룸_기본 서랍형<br><br>
+		판매가 : 653,000원
+		<br><br>
+		<button type="button">쇼핑카트에 추가하기</button>
+	</div>
+	<div class="element">
+		<div class="img"><img alt="인테리어" src="images/interior3.jpg"></div>
+		<br>
+		밀란 307 캄포 소파 3인용<br><br>
+		판매가 : 929,000원
+		<br><br>
+		<button type="button">쇼핑카트에 추가하기</button>
+	</div>
 </body>
 </html>
