update food, sports page

--- a/HTMLTest/WebContent/homepage/sports.html
+++ b/HTMLTest/WebContent/homepage/sports.html
@@ -3,8 +3,48 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Sports</title>
+	<style type="text/css">
+		div.element {
+			border: 1px solid #CCCCFF;
+			width: calc(32% - 30px);
+			height: 100%;
+			float: left;
+			box-shadow: 1px 1px 1px #666666;
+			padding: 30px 15px;
+			margin: 0 calc(1% - 5px);
+		}
+		div.img {
+			text-align: center;
+		}
+		img {
+			width: 200px;
+		}
+	</style>
 </head>
 <body>
-	<h1>Sports page</h1>
+	<div class="element">
+		<div class="img"><img alt="스포츠/레저" src="images/sports1.jpg"></div>
+		<br>
+		(G.I) 미군 오리지널 야전침대<br><br>
+		판매가 : 190,000원
+		<br><br>
+		<button type="button">쇼핑카트에 추가하기</button>
+	</div>
+	<div class="element">
+		<div class="img"><img alt="스포츠/레저" src="images/sports2.jpg"></div>
+		<br>
+		(BUCK) 꼼빠드레 엑스<br><br>
+		판매가 : 165,000원
+		<br><br>
+		<button type="button">쇼핑카트에 추가하기</button>
+	</div>
+	<div class="element">
+		<div class="img"><img alt="스포츠/레저" src="images/sports3.jpg"></div>
+		<br>
+		(로스코) 슈퍼 해먹 (OD)<br><br>
+		판매가 : 33,000원
+		<br><br>
+		<button type="button">쇼핑카트에 추가하기</button>
+	</div>
 </body>
 </html>
