--- a/HTMLTest/WebContent/homepage/food.html
+++ b/HTMLTest/WebContent/homepage/food.html
@@ -3,8 +3,48 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Food</title>
+	<style type="text/css">
+		div.element {
+			border: 1px solid #CCCCFF;
+			width: calc(32% - 30px);
+			height: 100%;
+			float: left;
+			box-shadow: 1px 1px 1px #666666;
+			padding: 30px 15px;
+			margin: 0 calc(1% - 5px);
+		}
+		div.img {
+			text-align: center;
+		}
+		img {
+			width: 200px;
+		}
+	</style>
 </head>
 <body>
-	<h1>Food page</h1>
+	<div class="element">
+		<div class="img"><img alt="음식" src="images/food1.jpg"></div>
+		<br>
+		교동 콩비지찌개<br><br>
+		판매가 : 13,270원
+		<br><br>
+		<button type="button">쇼핑카트에 추가하기</button>
+	</div>
+	<div class="element">
+		<div class="img"><img alt="음식" src="images/food2.jpg"></div>
+		<br>
+		곰곰 치즈스틱 (냉동)<br><br>
+		판매가 : 10,990원
+		<br><br>
+		<button type="button">쇼핑카트에 추가하기</button>
+	</div>
+	<div class="element">
+		<div class="img"><img alt="음식" src="images/food3.jpg"></div>
+		<br>
+		맛있는 오뚜기밥 큰밥<br><br>
+		판매가 : 20,020원
+		<br><br>
+		<button type="button">쇼핑카트에 추가하기</button>
+	</div>
 </body>
 </html>
