git upload test

--- a/HTMLTest/WebContent/homepage/register.html
+++ b/HTMLTest/WebContent/homepage/register.html
@@ -50,7 +50,7 @@
 					<label for="genderF">여성</label>
 				</div>
 		</fieldset>
-		<button type="button" style="width:150px; margin-left:10px;">제출</button>
+		<button type="button" style="width:150px; margin:5px 10px;">제출</button>
 		<button type="reset" style="width:150px;">초기화</button>
 	</form>
 </body>
