쇼핑카트에 담긴 물건 합계 계산기능 추가

--- a/HTMLTest/WebContent/homepage/index.html
+++ b/HTMLTest/WebContent/homepage/index.html
@@ -45,8 +45,8 @@
 				아이디<br>
 				<input type="text" name="userId"><br>
 				비밀번호<br>
-				<input type="text" name="password"><br>
-				<button type="button">로그인</button>
+				<input type="password" name="password"><br>
+				<button type="button" onclick="alert('기능 구현중');">로그인</button>
 				<button type="reset">초기화</button>
 			</form>
 			<br>
