--- a/HTMLTest/WebContent/homepage/register.html
+++ b/HTMLTest/WebContent/homepage/register.html
@@ -36,7 +36,7 @@
 				</div>
 				<div id="input">
 					<input type="text" name="userId">
-					<button type="button">중복검사</button>
+					<button type="button" onclick="alert('기능 구현중..')">중복검사</button>
 					<input type="password" name="password"><br>
 					<input type="password" name="passwordCheck"><br>
 					<input type="text" name="userName"><br>
@@ -50,7 +50,7 @@
 					<label for="genderF">여성</label>
 				</div>
 		</fieldset>
-		<button type="button" style="width:150px; margin:5px 10px;">제출</button>
+		<button type="button" style="width:150px; margin:5px 10px;" onclick="alert('기능 구현중..')">제출</button>
 		<button type="reset" style="width:150px;">초기화</button>
 	</form>
 </body>
