회원가입 정보 받아오기

--- a/HTMLTest/WebContent/homepage/computer.html
+++ b/HTMLTest/WebContent/homepage/computer.html
@@ -28,6 +28,8 @@
 		한성컴퓨터 TFG AX5507RXT<br>
 		AMD / 라이젠5-4세대 / 버미어 / 5600X (3.7GHz) / (AMD) B550 / DDR4 / 16GB / M.2 / 256GB / 지포스 RTX 3070 / 8GB / 1Gbps 유선 / HDMI / DP포트 / USB 3.1 / USB 3.0 / USB Type-C / 700W / 운영체제 미포함 / 미들타워 / 용도: 게임용
 		<br><br>
+		출시가: 1,000,000원
+		<br><br>
 		<button type="button">쇼핑카트에 추가하기</button>
 	</div>
 	<div class="element">
@@ -36,13 +38,17 @@
 		레노버 아이디어패드 Slim3-15IIL 5D<br>
 		39.6cm(15.6인치) / 인텔 / 코어i5-10세대 / 아이스레이크 / i5-1035G4 / 쿼드코어 / 운영체제(OS): 미포함(프리도스) / 1920x1080(FHD) / IPS / 광시야각 / 눈부심방지 / 슬림형 베젤 / DDR4 / 4GB / M.2(NVMe) / 256GB / 내장그래픽 / 802.11ac(Wi-Fi 5) / HDMI / 웹캠
 		<br><br>
+		출시가: 880,000원
+		<br><br>
 		<button type="button">쇼핑카트에 추가하기</button>
 	</div>
 	<div class="element">
 		<div class="img"><img alt="컴퓨터" src="images/computer3.jpg"></div>
 		<br>
 		APPLE 2020 맥북에어 MVH52KH/A<br>
-		33.78cm(13.3인치) / 인텔 / 코어i5-10세대 / 아이스레이크 / i5-1030NG7 / 쿼드코어 / 운영체제(OS): macOS / 2560x1600(WQXGA) / IPS / 광시야각 / 트루톤 / Retina / LPDDR4x / 8GB / SSD / 512GB / 내장그래픽 / 802.11ac(Wi-Fi 5) / 웹캠(HD) / 용도: 사무/인강용, 휴대용 / 색상: 골드 / 출시가: 1,720,000원
+		33.78cm(13.3인치) / 인텔 / 코어i5-10세대 / 아이스레이크 / i5-1030NG7 / 쿼드코어 / 운영체제(OS): macOS / 2560x1600(WQXGA) / IPS / 광시야각 / 트루톤 / Retina / LPDDR4x / 8GB / SSD / 512GB / 내장그래픽 / 802.11ac(Wi-Fi 5) / 웹캠(HD) / 용도: 사무/인강용, 휴대용 / 색상: 골드
+		<br><br>
+		출시가: 1,720,000원
 		<br><br>
 		<button type="button">쇼핑카트에 추가하기</button>
 	</div>
