--- a/HTMLTest/WebContent/homepage/clothing.html
+++ b/HTMLTest/WebContent/homepage/clothing.html
@@ -26,11 +26,11 @@
 		<div class="img"><img alt="의상" src="images/clothes1.jpg"></div>
 		헤비 보아 플리스 자켓_크림<br>
 		브랜드/품번 CODEGRAPHY / C20W0JP003CR<br>
-		조회수(1개월) 3.1만 회 이상<br>
-		누적판매(1년) 500개 이상(결제완료-반품)<br>
 		19~23세 , 여성 이 많이 구매했습니다.<br> 
 		국내 배송 / 입점사 배송<br>
 		출고 기간 평균 2.9일 / 주말, 공휴일 제외
+		<br><br>
+		판매가 : 152,000원
 		<br><br>
 		<button type="button">쇼핑카트에 추가하기</button>
 	</div>
@@ -38,11 +38,11 @@
 		<div class="img"><img alt="의상" src="images/clothes2.jpg"></div>
 		솔리드 숏 더플 코트 (네이비)<br>
 		브랜드/품번 LOFI / L20SDSDFCTNY<br>
-		조회수(1개월) 1만 회 이상<br>
-		누적판매(1년) 400개 이상(결제완료-반품)<br>
 		24~28세 , 남성 이 많이 구매했습니다.<br> 
 		배송 방법 국내 배송 / 입점사 배송 / 롯데택배<br>
 		출고 기간 평균 0.6일 / 주말, 공휴일 제외
+		<br><br>
+		판매가 : 312,000원
 		<br><br>
 		<button type="button">쇼핑카트에 추가하기</button>
 	</div>
@@ -50,11 +50,11 @@
 		<div class="img"><img alt="의상" src="images/clothes3.jpg"></div>
 		3일 지연 RDS 크루져 파카 블랙<br>
 		브랜드/품번 COVERNAT / CO2004DP09BK<br>
-		조회수(1개월) 8.6만 회 이상<br>
-		누적판매(1년) 600개 이상(결제완료-반품)<br>
 		24~28세 , 남성 이 많이 구매했습니다. <br>
 		배송 방법 국내 배송 / 입점사 배송 / CJ대한통운<br>
 		출고 기간 도움말 보기 평균 0.8일 / 주말, 공휴일 제외
+		<br><br>
+		판매가 : 67,000원
 		<br><br>
 		<button type="button">쇼핑카트에 추가하기</button>
 	</div>
