--- a/HTMLTest/WebContent/homepage/index.html
+++ b/HTMLTest/WebContent/homepage/index.html
@@ -43,9 +43,9 @@
 			<h3>Log In</h3>
 			<form action="">
 				아이디<br>
-				<input type="text" name="userId"><br>
+				<input type="text" name="userId" id="userId"><br>
 				비밀번호<br>
-				<input type="password" name="password"><br>
+				<input type="password" name="password" id="password"><br>
 				<button type="button" onclick="alert('기능 구현중');">로그인</button>
 				<button type="reset">초기화</button>
 			</form>
@@ -58,4 +58,17 @@
 		<p>footer</p>
 	</footer>
 </body>
+<script type="text/javascript">
+	var temp = window.location.search.replace("?","");
+	var list = temp.split("&");
+	var myInfo = new Array();
+	for(var i=0; i<list.length; i++){
+		var tmp = list[i].split("=");
+		myInfo[myInfo.length] = tmp[1];
+	}
+	if(myInfo.length > 0){
+		document.getElementById("userId").value = myInfo[0];
+		document.getElementById("password").value = myInfo[1];
+	}
+</script>
 </html>
