쇼핑카트 담기 기능 구현중

--- a/HTMLTest/WebContent/homepage/computer.html
+++ b/HTMLTest/WebContent/homepage/computer.html
@@ -50,7 +50,11 @@
 		<br><br>
 		출시가: 1,720,000원
 		<br><br>
-		<button type="button">쇼핑카트에 추가하기</button>
+		<form action="index.html" method="get" target="_parent">
+			<input type="hidden" name="prodName" value="MacBookAir">
+			<input type="hidden" name="prodprice" value=1720000>
+			<button type="submit">쇼핑카트에 추가하기</button>
+		</form>
 	</div>
 </body>
 </html>
