쇼핑카트 추가하기 기능 추가

--- a/HTMLTest/WebContent/homepage/clothing.html
+++ b/HTMLTest/WebContent/homepage/clothing.html
@@ -32,7 +32,11 @@
 		<br><br>
 		판매가 : 152,000원
 		<br><br>
-		<button type="button">쇼핑카트에 추가하기</button>
+		<form action="index.html" method="get" target="_parent">
+			<input type="hidden" name="prodName" value="jakets">
+			<input type="hidden" name="prodprice" value=152000>
+			<button type="submit">쇼핑카트에 추가하기</button>
+		</form>
 	</div>
 	<div class="element">
 		<div class="img"><img alt="의상" src="images/clothes2.jpg"></div>
@@ -44,11 +48,15 @@
 		<br><br>
 		판매가 : 312,000원
 		<br><br>
-		<button type="button">쇼핑카트에 추가하기</button>
+		<form action="index.html" method="get" target="_parent">
+			<input type="hidden" name="prodName" value="coat">
+			<input type="hidden" name="prodprice" value=312000>
+			<button type="submit">쇼핑카트에 추가하기</button>
+		</form>
 	</div>
 	<div class="element">
 		<div class="img"><img alt="의상" src="images/clothes3.jpg"></div>
-		3일 지연 RDS 크루져 파카 블랙<br>
+		RDS 크루져 파카 블랙<br>
 		브랜드/품번 COVERNAT / CO2004DP09BK<br>
 		24~28세 , 남성 이 많이 구매했습니다. <br>
 		배송 방법 국내 배송 / 입점사 배송 / CJ대한통운<br>
@@ -56,7 +64,11 @@
 		<br><br>
 		판매가 : 67,000원
 		<br><br>
-		<button type="button">쇼핑카트에 추가하기</button>
+		<form action="index.html" method="get" target="_parent">
+			<input type="hidden" name="prodName" value="PAKA">
+			<input type="hidden" name="prodprice" value=67000>
+			<button type="submit">쇼핑카트에 추가하기</button>
+		</form>
 	</div>
 </body>
 </html>
