--- a/HTMLTest/WebContent/homepage/computer.html
+++ b/HTMLTest/WebContent/homepage/computer.html
@@ -30,7 +30,11 @@
 		<br><br>
 		출시가: 1,000,000원
 		<br><br>
-		<button type="button">쇼핑카트에 추가하기</button>
+		<form action="index.html" method="get" target="_parent">
+			<input type="hidden" name="prodName" value="HansungTFG">
+			<input type="hidden" name="prodprice" value=1000000>
+			<button type="submit">쇼핑카트에 추가하기</button>
+		</form>
 	</div>
 	<div class="element">
 		<div class="img"><img alt="컴퓨터" src="images/computer2.jpg"></div>
@@ -40,7 +44,11 @@
 		<br><br>
 		출시가: 880,000원
 		<br><br>
-		<button type="button">쇼핑카트에 추가하기</button>
+		<form action="index.html" method="get" target="_parent">
+			<input type="hidden" name="prodName" value="LenovoThinkPad">
+			<input type="hidden" name="prodprice" value=880000>
+			<button type="submit">쇼핑카트에 추가하기</button>
+		</form>
 	</div>
 	<div class="element">
 		<div class="img"><img alt="컴퓨터" src="images/computer3.jpg"></div>
