--- a/HTMLTest/WebContent/homepage/interior.html
+++ b/HTMLTest/WebContent/homepage/interior.html
@@ -28,7 +28,11 @@
 		유로 602 필로우 침대 QK<br><br>
 		판매가 : 1,272,000원
 		<br><br>
-		<button type="button">쇼핑카트에 추가하기</button>
+		<form action="index.html" method="get" target="_parent">
+			<input type="hidden" name="prodName" value="bed">
+			<input type="hidden" name="prodprice" value=1272000>
+			<button type="submit">쇼핑카트에 추가하기</button>
+		</form>
 	</div>
 	<div class="element">
 		<div class="img"><img alt="인테리어" src="images/interior2.jpg"></div>
@@ -36,7 +40,11 @@
 		유로 로아 드레스룸_기본 서랍형<br><br>
 		판매가 : 653,000원
 		<br><br>
-		<button type="button">쇼핑카트에 추가하기</button>
+		<form action="index.html" method="get" target="_parent">
+			<input type="hidden" name="prodName" value="dressRoom">
+			<input type="hidden" name="prodprice" value=653000>
+			<button type="submit">쇼핑카트에 추가하기</button>
+		</form>
 	</div>
 	<div class="element">
 		<div class="img"><img alt="인테리어" src="images/interior3.jpg"></div>
@@ -44,7 +52,11 @@
 		밀란 307 캄포 소파 3인용<br><br>
 		판매가 : 929,000원
 		<br><br>
-		<button type="button">쇼핑카트에 추가하기</button>
+		<form action="index.html" method="get" target="_parent">
+			<input type="hidden" name="prodName" value="sofa">
+			<input type="hidden" name="prodprice" value=929000>
+			<button type="submit">쇼핑카트에 추가하기</button>
+		</form>
 	</div>
 </body>
 </html>
