--- a/HTMLTest/WebContent/homepage/music.html
+++ b/HTMLTest/WebContent/homepage/music.html
@@ -38,7 +38,10 @@
 		<div class="audio">
 			<audio src="images/horse.ogv" controls></audio>
 			<br><br>
-			<button type="button">쇼핑카트에 추가하기</button>
+			<form action="index.html" method="get" target="_parent">
+				<input type="hidden" name="prodName" value="PERFECT">
+				<button type="submit">쇼핑카트에 추가하기</button>
+			</form>
 		</div>
 	</div>
 	<div class="element">
@@ -51,7 +54,10 @@
 		<div class="audio">
 			<audio src="images/horse.ogv" controls></audio>
 			<br><br>
-			<button type="button">쇼핑카트에 추가하기</button>
+			<form action="index.html" method="get" target="_parent">
+				<input type="hidden" name="prodName" value="WHYBE?">
+				<button type="submit">쇼핑카트에 추가하기</button>
+			</form>
 		</div>
 	</div>
 	<div class="element">
@@ -63,7 +69,10 @@
 		<div class="audio">
 			<audio src="images/horse.ogv" controls></audio>
 			<br><br>
-			<button type="button">쇼핑카트에 추가하기</button>
+			<form action="index.html" method="get" target="_parent">
+				<input type="hidden" name="prodName" value="PLAY">
+				<button type="submit">쇼핑카트에 추가하기</button>
+			</form>
 		</div>
 	</div>
 </body>
