--- a/HTMLTest/WebContent/homepage/sports.html
+++ b/HTMLTest/WebContent/homepage/sports.html
@@ -28,7 +28,11 @@
 		(G.I) 미군 오리지널 야전침대<br><br>
 		판매가 : 190,000원
 		<br><br>
-		<button type="button">쇼핑카트에 추가하기</button>
+		<form action="index.html" method="get" target="_parent">
+			<input type="hidden" name="prodName" value="campBed">
+			<input type="hidden" name="prodprice" value=190000>
+			<button type="submit">쇼핑카트에 추가하기</button>
+		</form>
 	</div>
 	<div class="element">
 		<div class="img"><img alt="스포츠/레저" src="images/sports2.jpg"></div>
@@ -36,7 +40,11 @@
 		(BUCK) 꼼빠드레 엑스<br><br>
 		판매가 : 165,000원
 		<br><br>
-		<button type="button">쇼핑카트에 추가하기</button>
+		<form action="index.html" method="get" target="_parent">
+			<input type="hidden" name="prodName" value="axe">
+			<input type="hidden" name="prodprice" value=165000>
+			<button type="submit">쇼핑카트에 추가하기</button>
+		</form>
 	</div>
 	<div class="element">
 		<div class="img"><img alt="스포츠/레저" src="images/sports3.jpg"></div>
@@ -44,7 +52,11 @@
 		(로스코) 슈퍼 해먹 (OD)<br><br>
 		판매가 : 33,000원
 		<br><br>
-		<button type="button">쇼핑카트에 추가하기</button>
+		<form action="index.html" method="get" target="_parent">
+			<input type="hidden" name="prodName" value="hammok">
+			<input type="hidden" name="prodprice" value=33000>
+			<button type="submit">쇼핑카트에 추가하기</button>
+		</form>
 	</div>
 </body>
 </html>
