--- a/HTMLTest/WebContent/homepage/food.html
+++ b/HTMLTest/WebContent/homepage/food.html
@@ -28,7 +28,11 @@
 		교동 콩비지찌개<br><br>
 		판매가 : 13,270원
 		<br><br>
-		<button type="button">쇼핑카트에 추가하기</button>
+		<form action="index.html" method="get" target="_parent">
+			<input type="hidden" name="prodName" value="jjigae">
+			<input type="hidden" name="prodprice" value=13270>
+			<button type="submit">쇼핑카트에 추가하기</button>
+		</form>
 	</div>
 	<div class="element">
 		<div class="img"><img alt="음식" src="images/food2.jpg"></div>
@@ -36,7 +40,11 @@
 		곰곰 치즈스틱 (냉동)<br><br>
 		판매가 : 10,990원
 		<br><br>
-		<button type="button">쇼핑카트에 추가하기</button>
+		<form action="index.html" method="get" target="_parent">
+			<input type="hidden" name="prodName" value="cheeseStick">
+			<input type="hidden" name="prodprice" value=10990>
+			<button type="submit">쇼핑카트에 추가하기</button>
+		</form>
 	</div>
 	<div class="element">
 		<div class="img"><img alt="음식" src="images/food3.jpg"></div>
@@ -44,7 +52,11 @@
 		맛있는 오뚜기밥 큰밥<br><br>
 		판매가 : 20,020원
 		<br><br>
-		<button type="button">쇼핑카트에 추가하기</button>
+		<form action="index.html" method="get" target="_parent">
+			<input type="hidden" name="prodName" value="rice">
+			<input type="hidden" name="prodprice" value=20020>
+			<button type="submit">쇼핑카트에 추가하기</button>
+		</form>
 	</div>
 </body>
 </html>
