--- a/HTMLTest/WebContent/html/hideshow3.html
+++ b/HTMLTest/WebContent/html/hideshow3.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>show, hide 예제</title>
-	<script src="../js/jquery-3.5.1.min.js"></script>
+	<script src="../js/jquery-3.5.1.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			$("a").click(function(){
